--- a/app/views/account/_tramenu_login.html.erb
+++ b/app/views/account/_tramenu_login.html.erb
@@ -1,90 +1,74 @@
 <% if User.current && User.current.logged? %>
-  <div class="fs-tramenu-blockheader x-granata" style="overflow: hidden;"> <%= User.current.name() %></div>
-  <div class="fs-blockcontent fs-login-logged">
-    <div id='fs-login-avatar'>
-      <div class="fs-login">
-        <% if User.current.user_profile %>
-          <%= User.current.user_profile.my_avatar(:xs) %>
-        <% else %>
-          <%= image_tag "/images/commons/xs-no_avatar.jpg", :class => 'fs-vuoto-inline3-button'  %>
-        <% end  %>
-      </div>
-      <% if User.current.canbackend? %>
-        <div class="fs-login" id="fs-login-txt">
-            <%= link_to "Accesso FISMINE", url_for(:controller => 'activities', :action => 'index' , :id => nil), :target =>'_blank',  :class => 'fs-vuoto-inline3-button' %>
-                <br/>
-            <% @uid = User.current.user_profile %>
-            <% if !@uid.nil? %>
-                <%= link_to "Profilo Pubblico", url_for(:controller => 'editorial', :action => 'profilo_show', :id => @uid), :class => 'fs-vuoto-inline3-button' %>
-            <% else %>
-                <%= link_to "Nuovo Profilo", url_for(:controller => 'editorial', :action => 'profilo_new', :id => User.current.id), :class => 'fs-vuoto-inline3-button' %>
-            <% end %>
+    <div class="fs-tramenu-blockheader x-granata" style="overflow: hidden;"> <%= User.current.name() %></div>
+    <div class="fs-blockcontent fs-login-logged">
+      <div id='fs-login-avatar'>
+        <div class="fs-login">
+          <% if User.current.user_profile %>
+              <%= User.current.user_profile.my_avatar(:xs) %>
+          <% else %>
+              <%= image_tag "/images/commons/xs-no_avatar.jpg", :class => 'fs-vuoto-inline3-button' %>
+          <% end %>
         </div>
-      <% else %>
-         <div class="fs-login">
-            <%= link_to l(:label_my_page), :controller => 'mio_profilo', :action => 'account' %>
-         </div>
-      <% end %>
+        <% if User.current.canbackend? %>
+            <div class="fs-login" id="fs-login-txt">
+              <%= link_to "Accesso FISMINE", url_for(:controller => 'activities', :action => 'index', :id => nil), :target => '_blank', :class => 'fs-vuoto-inline3-button' %>
+              <br/>
+              <% @uid = User.current.user_profile %>
+              <% if !@uid.nil? %>
+                  <%= link_to "Profilo Pubblico", url_for(:controller => 'editorial', :action => 'profilo_show', :id => @uid), :class => 'fs-vuoto-inline3-button' %>
+              <% else %>
+                  <%= link_to "Nuovo Profilo", url_for(:controller => 'editorial', :action => 'profilo_new', :id => User.current.id), :class => 'fs-vuoto-inline3-button' %>
+              <% end %>
+            </div>
+        <% else %>
+            <div class="fs-login">
+              <%= link_to l(:label_my_page), :controller => 'mio_profilo', :action => 'account' %>
+            </div>
+        <% end %>
 <%# link_to "Lavora con FISMINE",:controller=> 'mio_profilo', :action=>'page', :class=> 'fs-button'  %>
 <%# link_to l(:label_my_page), :controller => 'my', :action => 'page' %>
 <%# link_to l(:label_my_account), :controller => 'my', :action => 'account' %>
-      <div class="fs-login">
-        <%= link_to l(:label_logout), :signout, :class => 'fs-vuoto-inline3-button', :id => "fs-login-exit" %>
-      </div>
-      <div class="fs-logged2">
-      <% if User.current.associazione_affiliata %>
-          <div class="fs-login" id="fs-login2-txt">
-            <span> Associato a:</span>
-            <br/> <%= link_to h(User.current.associazione_affiliata), asso_path(User.current.associazione_affiliata) %>
-          </div>
-      <% else %>
-          <% if User.current.sigla_tipo() %>
-              <div class="fs-login" id="fs-login2-txt">
-                <span> Affilato a:</span><br/>
-                <%= link_to h(User.current.sigla_tipo()), cross_organization_path(User.current.sigla_tipo()) %>
-              </div>
-          <% end %>
-      <% end %>
-      <% if User.current.organization() %>
-        <div class="fs-login" id="fs-login2-asso">
-          <%= image_tag "/images/commons/assos/#{ User.current.asso.logo}", :width => 50, :height => 50, :border => 0 %>
+        <div class="fs-login">
+          <%= link_to l(:label_logout), :signout, :class => 'fs-vuoto-inline3-button', :id => "fs-login-exit" %>
         </div>
-    <% else %>
-        <div class="fs-login" id="fs-login2-asso">
-          <%= image_tag "/images/ico/fs.png", :width => 50, :height => 50, :border => 0 %>
+        <div class="clearfix"></div>
+        <div class="fs-login-my-abbo">
+          <%= User.current.my_abbo_isprivate? ? '' :'Associato a...' %>
         </div>
-      <% end %>
+        <div class="fs-logged2"><span>  <%= user_myasso_text(User.current) %></span>
+          <%= image_tag(user_myasso_icon(User.current, :s), :width => 48, :height => 48) %>
+          <%# link_to(User.current.user_myasso_icon , asso_path(User.current.user_myasso_text)) %>
+        </div>
       </div>
     </div>
-  </div>
 <% else %>
-  <p class="fs-tramenu-blockheader x-granata">Accesso Utenti Abbonati</p>
-  <div class="fs-blockcontent">
+    <p class="fs-tramenu-blockheader x-granata">Accesso Utenti Abbonati</p>
+    <div class="fs-blockcontent">
       <% form_tag({:controller => 'account', :action => 'login'}, :method => 'post') do %>
-        <%= back_url_hidden_field_tag %>
-        <fieldset class="input" style="border:none; margin-top:-7px; ">
-          <div id="fs-form-login">
-            <span><%= l(:field_login)+ ':' %></span>
-            <%= text_field_tag 'username', nil, :tabindex => '1' %>
+          <%= back_url_hidden_field_tag %>
+          <fieldset class="input" style="border:none; margin-top:-7px; ">
+            <div id="fs-form-login">
+              <span><%= l(:field_login)+ ':' %></span>
+              <%= text_field_tag 'username', nil, :tabindex => '1' %>
 
-            <span><%= l(:field_password)+ ':' %></span>
-            <%= password_field_tag 'password', nil, :tabindex => '2' %>
-            <br/>
-          </div>
+              <span><%= l(:field_password)+ ':' %></span>
+              <%= password_field_tag 'password', nil, :tabindex => '2' %>
+              <br/>
+            </div>
 
-          <div class="fs-form-login-remember">
-            <label class="fs-checkbox">
-              <input type="checkbox" name="remember" value="yes" alt="Remember Me"/>Memorizza!
-            </label>
-          </div>
-          <input type="submit" value="Accedi" name="login" id="fs-form-login-btn" class="fs-button"/>
-        </fieldset>
+            <div class="fs-form-login-remember">
+              <label class="fs-checkbox">
+                <input type="checkbox" name="remember" value="yes" alt="Remember Me"/>Memorizza!
+              </label>
+            </div>
+            <input type="submit" value="Accedi" name="login" id="fs-form-login-btn" class="fs-button"/>
+          </fieldset>
       <% end %>
       <%= javascript_tag "$('#username').focus();" %>
       <% if Setting.lost_password? %>
-        <div class='fs-pass'>
-          <%= link_to l(:label_password_lost), :controller => 'account', :action => 'lost_password' %>
-        </div>
+          <div class='fs-pass'>
+            <%= link_to l(:label_password_lost), :controller => 'account', :action => 'lost_password' %>
+          </div>
       <% end %>
-  </div>
+    </div>
 <% end %>
