--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -67,7 +67,7 @@
       <!-- tabella di 2 righe per il testo -->
       <table width="318" border="0" cellpadding="0" cellspacing="0">
         <tr>
-          <td  height="0" align="left" valign="center" style="border-bottom:1px solid #1C6693;">
+          <td height="0" align="left" valign="center" style="border-bottom:1px solid #1C6693;">
             <table width="100%">
               <tr>
                 <td align="center" valign="center" style="text-align: center;">
@@ -103,7 +103,7 @@
 <!-- inizio visibile solo se associato o affiliato-->
 <table width="560" border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td width="500"  bgcolor="#ffffff" align="right" style="vertical-align: middle;">
+    <td width="500" bgcolor="#ffffff" align="right" style="vertical-align: middle;">
       <font style="font-family:Tahoma,Arial, Helvetica, sans-serif; font-size:15px; color:#1e1e1e; line-height:18px; font-weight: bold;">
         <%= user_myasso_text(@user) %>
       </font>
@@ -191,8 +191,10 @@
                     <%= h(nart.subject) %>
                   </a>
                 </font>
-                <br/> &nbsp;
               </td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
             </tr>
           </table>
         </td>
