register and user sheet

--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -542,7 +542,7 @@
         return '<div>' + Citta.label + '</div>';
     }
     function CittaSelection(Citta) {
-        $('#comune_id').val(Citta.id);
+        $('#user_comune_id').val(Citta.id);
         return Citta.value;
     }
 </script>
