--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,6 +1,6 @@
 <% if articolo %>
     <div class="fs-postmetadataheader">
-      <div class="fs-art-sezione-full">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></div>
+      <div class="fs-art-sezione-full">&nbsp;<%= articolo.section.full_name %></div>
       <div class="fs-postheader-full">      <%= articolo.subject %>  </div>
     </div>
     <div style="width:100%;">
