--- a/app/views/editorial/pages_abbonamenti.html.erb
+++ b/app/views/editorial/pages_abbonamenti.html.erb
@@ -5,15 +5,22 @@
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
           <div class="fs-layout-cell layout-item-0" style="width: 99%">
-            <%= get_status_role(User.current) %><h1 class="<%= User.current.role %>"><%= User.current.name %></h1>
+            <h1 class="<%= User.current.role %>"><%= User.current.name %></h1>
             <h2><%= user_role_iconized(User.current.icon(), :size => 'l', :text => ('Scadenza: ' + link_to( User.current.scadenza.to_s + ' (' + User.current.scadenza_fra + ')', :controller => 'mio_profilo', :action => 'account')), :icon_for => User.current.uicon()) %></h2>
             <%# User.current.my_abbo_isprivate? %>
+            <div style="float:left; margin: 10px; padding: 10px;">
+              <%= User.current. getLocalization() %>
+            </div>
+            <div style="float:left; margin: 10px; padding: 10px;">
+              <%= get_status_role(User.current) %>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <br/>
   </article>
+  <div class="clearfix"></div>
   <%	end  %>
   <br/>
   <article class="fs-post fs-article">
